Cross Platform and Shader improvements
- Shaders can now be created as assets.
- Shaders are now managed by the GraphicsManager as well.
- The default shaders will now support drivers without "Dynamically Uniform Expression Support".
- Added the ability to specify fallback shaders.
- Added documentation to the Unix and Windows library classes and exposed them to the public.
- The OpenGL context will now always be the highest possible version. Except when RendeDoc is attached and on Mac where it will default to 3.3
- The TextFile asset now exposes its Content as a string rather than a string array. You'll have to split it by new line yourself.
- Alt+Center will activate Fullscreen mode on MacOS and Linux instead of Borderless. As it was breaking.
- The thread manager now reports whether the thread is bound.
- Code style

Fixes #32

--- a/Emotion.ExecTest/Emotion.ExecTest.csproj
+++ b/Emotion.ExecTest/Emotion.ExecTest.csproj
@@ -23,6 +23,19 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release-GLES|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\Release-GLES\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>
+    </StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -38,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestsScene.cs" />
     <Compile Include="MainScene.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -46,6 +60,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Emotion.Tests\Emotion.Tests.csproj">
+      <Project>{35d0fdac-885a-4f6c-a976-b5165007946c}</Project>
+      <Name>Emotion.Tests</Name>
+    </ProjectReference>
     <ProjectReference Include="..\EmotionCore\EmotionCore.csproj">
       <Project>{723c67bd-47ee-482d-bc0d-728211d7f5f1}</Project>
       <Name>EmotionCore</Name>
