--- a/Emotion.ExecTest/Emotion.ExecTest.csproj
+++ b/Emotion.ExecTest/Emotion.ExecTest.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{00F99B68-7274-421C-BBE7-A24B92AFAD48}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>Emotion.ExecTest</RootNamespace>
     <AssemblyName>Emotion.ExecTest</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
@@ -51,7 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TestsScene.cs" />
+    <None Include="TestsScene.cs" />
     <Compile Include="MainScene.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -60,10 +60,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Emotion.Tests\Emotion.Tests.csproj">
-      <Project>{35d0fdac-885a-4f6c-a976-b5165007946c}</Project>
-      <Name>Emotion.Tests</Name>
-    </ProjectReference>
     <ProjectReference Include="..\EmotionCore\EmotionCore.csproj">
       <Project>{723c67bd-47ee-482d-bc0d-728211d7f5f1}</Project>
       <Name>EmotionCore</Name>
