--- a/EmotionCore/EmotionCore.nuspec
+++ b/EmotionCore/EmotionCore.nuspec
@@ -24,6 +24,6 @@
 	<file src="bin\Debug-GLES\EmotionCore.dll" target="lib\net462" />
 	<file src="bin\Debug-GLES\EmotionCore.xml" target="lib\net462" />
 	<file src="bin\Debug-GLES\EmotionCore.pdb" target="lib\net462" />
-	<file src="Emotion.targets" target="Build" />
+	<file src="bin\Debug-GLES\**" target="Build" />
   </files>
 </package>
