CI Fixes and SharpFont dllmap

--- a/EmotionCore/SharpFont.dll.config
+++ b/EmotionCore/SharpFont.dll.config
@@ -3,5 +3,6 @@
 <configuration>
   <dllmap dll="freetype6" os="linux" target="./Libraries/Linux/freetype.so" />
   <dllmap dll="freetype6" os="osx" target="./Libraries/MacOS/libfreetype.6.dylib" />
-  <dllmap dll="freetype6" os="windows" target="./Libraries/x64/freetype6.dll" />
+  <dllmap dll="freetype6" cpu="x64" os="windows" target="./Libraries/Windowsx64/freetype6.dll" />
+  <dllmap dll="freetype6" cpu="x86" os="windows" target="./Libraries/Windowsx86/freetype6.dll" />
 </configuration>
