Added a compatible vert shader, compat shaders now use version 330.
- Also fixed version detection for below 3.3

--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -229,9 +229,10 @@
     <Compile Include="src\Meta.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Assets\Shaders\CompatFrag.glsl" />
-    <EmbeddedResource Include="Assets\Shaders\DefaultFrag.glsl" />
-    <EmbeddedResource Include="Assets\Shaders\DefaultVert.glsl" />
+    <EmbeddedResource Include="Assets\Shaders\CompatFrag.frag" />
+    <EmbeddedResource Include="Assets\Shaders\DefaultFrag.frag" />
+    <EmbeddedResource Include="Assets\Shaders\DefaultVert.vert" />
+    <EmbeddedResource Include="Assets\Shaders\CompatVert.vert" />
     <None Include="EmotionCore.dll.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
