--- a/Adfectus Plugins/Adfectus.ImGuiNet/Adfectus.ImGuiNet.csproj
+++ b/Adfectus Plugins/Adfectus.ImGuiNet/Adfectus.ImGuiNet.csproj
@@ -6,10 +6,12 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DocumentationFile>V:\Dev\Emotion\Adfectus Plugins\Adfectus.ImGuiNet\Adfectus.ImGuiNet.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
