--- a/Adfectus/Adfectus.targets
+++ b/Adfectus/Adfectus.targets
@@ -46,54 +46,32 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="$(MSBuildThisFileDirectory)Libraries\win64\FreeImage.dll">
-      <Link>Libraries\win64\FreeImage.dll</Link>
+    <None Include="$(MSBuildThisFileDirectory)Libraries\win\FreeImage.dll">
+      <Link>Libraries\win\FreeImage.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="$(MSBuildThisFileDirectory)Libraries\win64\freetype6.dll">
-      <Link>Libraries\win64\freetype6.dll</Link>
+    <None Include="$(MSBuildThisFileDirectory)Libraries\win\freetype6.dll">
+      <Link>Libraries\win\freetype6.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="$(MSBuildThisFileDirectory)Libraries\win64\glfw3.dll">
-      <Link>Libraries\win64\glfw3.dll</Link>
+    <None Include="$(MSBuildThisFileDirectory)Libraries\win\glfw3.dll">
+      <Link>Libraries\win\glfw3.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="$(MSBuildThisFileDirectory)Libraries\win64\openal32.dll">
-      <Link>Libraries\win64\openal32.dll</Link>
+    <None Include="$(MSBuildThisFileDirectory)Libraries\win\openal32.dll">
+      <Link>Libraries\win\openal32.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="$(MSBuildThisFileDirectory)Libraries\win64\msvcr100.dll">
-      <Link>Libraries\win64\msvcr100.dll</Link>
+    <None Include="$(MSBuildThisFileDirectory)Libraries\win\msvcr100.dll">
+      <Link>Libraries\win\msvcr100.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="$(MSBuildThisFileDirectory)Libraries\win64\vcomp120.dll">
-      <Link>Libraries\win64\vcomp120.dll</Link>
+    <None Include="$(MSBuildThisFileDirectory)Libraries\win\vcomp120.dll">
+      <Link>Libraries\win\vcomp120.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="$(MSBuildThisFileDirectory)Libraries\win64\vcruntime140.dll">
-      <Link>Libraries\win64\vcruntime140.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="$(MSBuildThisFileDirectory)Libraries\win32\FreeImage.dll">
-      <Link>Libraries\win32\FreeImage.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="$(MSBuildThisFileDirectory)Libraries\win32\freetype6.dll">
-      <Link>Libraries\win32\freetype6.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="$(MSBuildThisFileDirectory)Libraries\win32\glfw3.dll">
-      <Link>Libraries\win32\glfw3.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="$(MSBuildThisFileDirectory)Libraries\win32\openal32.dll">
-      <Link>Libraries\win32\openal32.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="$(MSBuildThisFileDirectory)Libraries\win32\msvcr100.dll">
-      <Link>Libraries\win32\msvcr100.dll</Link>
+    <None Include="$(MSBuildThisFileDirectory)Libraries\win\vcruntime140.dll">
+      <Link>Libraries\win\vcruntime140.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
