--- a/Rationale/Rationale.csproj
+++ b/Rationale/Rationale.csproj
@@ -17,8 +17,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Adfectus.ImGuiNet\Adfectus.ImGuiNet.csproj" />
+    <ProjectReference Include="..\Adfectus.Platform.DesktopGL\Adfectus.Platform.DesktopGL.csproj" />
     <ProjectReference Include="..\Adfectus\Adfectus.csproj" />
-    <ProjectReference Include="..\Emotion.Platform.DesktopGL\Adfectus.Platform.DesktopGL.csproj" />
   </ItemGroup>
 
 </Project>
