--- a/Adfectus.Tests/Adfectus.Tests.csproj
+++ b/Adfectus.Tests/Adfectus.Tests.csproj
@@ -37,8 +37,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Adfectus.Platform.DesktopGL\Adfectus.Platform.DesktopGL.csproj" />
     <ProjectReference Include="..\Adfectus\Adfectus.csproj" />
-    <ProjectReference Include="..\Emotion.Platform.DesktopGL\Adfectus.Platform.DesktopGL.csproj" />
   </ItemGroup>
 
   <ItemGroup>
