Sound API Corrections

--- a/Adfectus.Platform.DesktopGL/Adfectus.Platform.DesktopGL.csproj
+++ b/Adfectus.Platform.DesktopGL/Adfectus.Platform.DesktopGL.csproj
@@ -6,10 +6,12 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DocumentationFile>.\bin\Adfectus.Platform.DesktopGL.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
