--- a/Adfectus.Platform.DesktopGL/Adfectus.Platform.DesktopGL.nuspec
+++ b/Adfectus.Platform.DesktopGL/Adfectus.Platform.DesktopGL.nuspec
@@ -2,35 +2,24 @@
 
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
-    <id>AdfectusDebug</id>
-    <version>0.0.15</version>
-    <title>Adfectus Engine - Debug Mode</title>
+    <id>Adfectus.Platform.DesktopGL</id>
+    <version>0.0.1</version>
+    <title>Adfectus Platform Desktop</title>
     <authors>Vlad 'Cryru' Abadzhiev</authors>
     <owners>Vlad 'Cryru' Abadzhiev</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <license type="expression">MIT</license>
     <projectUrl>https://github.com/Cryru/Emotion</projectUrl>
     <iconUrl>https://github.com/Cryru/Emotion/blob/master/EmotionLogo.png?raw=true</iconUrl>
-    <description>Adfectus is a cross-platform game engine written in C# using .NetCore, with the intent of abstracting the lower levels of game programming, without taking away control from the developer. The core principle is that making games as a programmer should be about coding, and not about drag and drop interfaces, or wrestling with linking libraries and making the same interfaces over and over again. I made this to provide indie developers (and mostly myself) with a foundation which can be extended and adapted to a game's needs.</description>
-    <summary>A 2D oriented game engine.</summary>
+    <description>The Adfectus OpenGL based platform for Linux, Windows, and MacOS</description>
+    <summary>Desktop platform for Adfectus.</summary>
     <copyright>Copyright 2019</copyright>
     <language>en-US</language>
     <tags>game-engine game engine emotion opengl gles opegles cross-platform game-development linux macos freeimage freetype openal adfectus</tags>
     <dependencies>
       <group targetFramework=".NETCoreApp3.0">
-        <dependency id="Adfectus.FreeImage" version="1.0.0" exclude="Build,Analyzers" />
-        <dependency id="Adfectus.Glfw" version="1.0.0" exclude="Build,Analyzers" />
-        <dependency id="Adfectus.OpenAL" version="1.0.0" exclude="Build,Analyzers" />
-        <dependency id="Adfectus.OpenGLNet" version="1.0.1" exclude="Build,Analyzers" />
-        <dependency id="Adfectus.SharpFont" version="1.0.0" exclude="Build,Analyzers" />
-        <dependency id="Jint" version="2.11.58" exclude="Build,Analyzers" />
+        <dependency id="Adfectus" version="0.0.16" exclude="Build,Analyzers" />
         <dependency id="Microsoft.NETCore.Platforms" version="3.0.0-preview.19073.11" exclude="Build,Analyzers" />
-        <dependency id="Serilog" version="2.8.0" exclude="Build,Analyzers" />
-        <dependency id="Serilog.Sinks.Async" version="1.3.0" exclude="Build,Analyzers" />
-        <dependency id="Serilog.Sinks.Console" version="3.1.1" exclude="Build,Analyzers" />
-        <dependency id="Serilog.Sinks.File" version="4.0.0" exclude="Build,Analyzers" />
-        <dependency id="System.Runtime.InteropServices" version="4.3.0" exclude="Build,Analyzers" />
-        <dependency id="TiledSharp" version="1.0.1" exclude="Build,Analyzers" />
       </group>
     </dependencies>
   </metadata>
@@ -52,9 +41,9 @@
     <file src="Libraries\win\openal32.dll" target="Build\Libraries\win\openal32.dll" />
     <file src="Libraries\win\vcomp120.dll" target="Build\Libraries\win\vcomp120.dll" />
     <file src="Libraries\win\vcruntime140.dll" target="Build\Libraries\win\vcruntime140.dll" />
-    <file src="AdfectusDebug.targets" target="Build\AdfectusDebug.targets" />
-    <file src="bin\Debug\netcoreapp3.0\Adfectus.dll" target="lib\netcoreapp3.0\Adfectus.dll" />
-    <file src="bin\Debug\netcoreapp3.0\Adfectus.pdb" target="lib\netcoreapp3.0\Adfectus.pdb" />
-    <file src="bin\Adfectus.xml" target="lib\netcoreapp3.0\Adfectus.xml" />
+    <file src="Adfectus.Platform.DesktopGL.targets" target="Build\Adfectus.Platform.DesktopGL.targets" />
+    <file src="bin\Release\netcoreapp3.0\Adfectus.Platform.DesktopGL.dll" target="lib\netcoreapp3.0\Adfectus.Platform.DesktopGL.dll" />
+    <file src="bin\Release\netcoreapp3.0\Adfectus.Platform.DesktopGL.pdb" target="lib\netcoreapp3.0\Adfectus.Platform.DesktopGL.pdb" />
+    <file src="bin\Release\netcoreapp3.0\Adfectus.Platform.DesktopGL.xml" target="lib\netcoreapp3.0\Adfectus.Platform.DesktopGL.xml" />
   </files>
 </package>
