--- a/Adfectus/Adfectus.nuspec
+++ b/Adfectus/Adfectus.nuspec
@@ -3,7 +3,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>Adfectus</id>
-    <version>0.0.15</version>
+    <version>0.0.17</version>
     <title>Adfectus Engine</title>
     <authors>Vlad 'Cryru' Abadzhiev</authors>
     <owners>Vlad 'Cryru' Abadzhiev</owners>
@@ -18,11 +18,6 @@
     <tags>game-engine game engine emotion opengl gles opegles cross-platform game-development linux macos freeimage freetype openal adfectus</tags>
     <dependencies>
       <group targetFramework=".NETCoreApp3.0">
-        <dependency id="Adfectus.FreeImage" version="1.0.0" exclude="Build,Analyzers" />
-        <dependency id="Adfectus.Glfw" version="1.0.0" exclude="Build,Analyzers" />
-        <dependency id="Adfectus.OpenAL" version="1.0.0" exclude="Build,Analyzers" />
-        <dependency id="Adfectus.OpenGLNet" version="1.0.1" exclude="Build,Analyzers" />
-        <dependency id="Adfectus.SharpFont" version="1.0.0" exclude="Build,Analyzers" />
         <dependency id="Jint" version="2.11.58" exclude="Build,Analyzers" />
         <dependency id="Microsoft.NETCore.Platforms" version="3.0.0-preview.19073.11" exclude="Build,Analyzers" />
         <dependency id="Serilog" version="2.8.0" exclude="Build,Analyzers" />
@@ -35,26 +30,8 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="Libraries\linux\FreeImage.so" target="Build\Libraries\linux\FreeImage.so" />
-    <file src="Libraries\linux\freetype6.so" target="Build\Libraries\linux\freetype6.so" />
-    <file src="Libraries\linux\glfw3.so" target="Build\Libraries\linux\glfw3.so" />
-    <file src="Libraries\linux\libsndio.so.6.1" target="Build\Libraries\linux\libsndio.so.6.1" />
-    <file src="Libraries\linux\openal32.so" target="Build\Libraries\linux\openal32.so" />
-    <file src="Libraries\macOS\FreeImage.dylib" target="Build\Libraries\macOS\FreeImage.dylib" />
-    <file src="Libraries\macOS\freetype6.dylib" target="Build\Libraries\macOS\freetype6.dylib" />
-    <file src="Libraries\macOS\glfw3.dylib" target="Build\Libraries\macOS\glfw3.dylib" />
-    <file src="Libraries\macOS\libpng14.14.dylib" target="Build\Libraries\macOS\libpng14.14.dylib" />
-    <file src="Libraries\macOS\openal32.dylib" target="Build\Libraries\macOS\openal32.dylib" />
-    <file src="Libraries\win\FreeImage.dll" target="Build\Libraries\win\FreeImage.dll" />
-    <file src="Libraries\win\freetype6.dll" target="Build\Libraries\win\freetype6.dll" />
-    <file src="Libraries\win\glfw3.dll" target="Build\Libraries\win\glfw3.dll" />
-    <file src="Libraries\win\msvcr100.dll" target="Build\Libraries\win\msvcr100.dll" />
-    <file src="Libraries\win\openal32.dll" target="Build\Libraries\win\openal32.dll" />
-    <file src="Libraries\win\vcomp120.dll" target="Build\Libraries\win\vcomp120.dll" />
-    <file src="Libraries\win\vcruntime140.dll" target="Build\Libraries\win\vcruntime140.dll" />
-    <file src="Adfectus.targets" target="Build\Adfectus.targets" />
-    <file src="bin\Release\netcoreapp3.0\Adfectus.dll" target="lib\netcoreapp3.0\Adfectus.dll" />
-    <file src="bin\Release\netcoreapp3.0\Adfectus.pdb" target="lib\netcoreapp3.0\Adfectus.pdb" />
-    <file src="bin\Release\netcoreapp3.0\Adfectus.xml" target="lib\netcoreapp3.0\Adfectus.xml" />
+    <file src="bin\Release\netstandard2.0\Adfectus.dll" target="lib\netstandard2.0\Adfectus.dll" />
+    <file src="bin\Release\netstandard2.0\Adfectus.pdb" target="lib\netstandard2.0\Adfectus.pdb" />
+    <file src="bin\Release\netstandard2.0\Adfectus.xml" target="lib\netstandard2.0\Adfectus.xml" />
   </files>
 </package>
