--- a/Adfectus.ImGuiNet/Adfectus.ImGuiNet.csproj
+++ b/Adfectus.ImGuiNet/Adfectus.ImGuiNet.csproj
@@ -11,7 +11,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DocumentationFile>V:\Dev\Emotion\Adfectus Plugins\Adfectus.ImGuiNet\Adfectus.ImGuiNet.xml</DocumentationFile>
+    <DocumentationFile>.\bin\Adfectus.ImGuiNet.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
