--- a/Adfectus.ExecTest/Adfectus.ExecTest.csproj
+++ b/Adfectus.ExecTest/Adfectus.ExecTest.csproj
@@ -28,6 +28,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Adfectus.ImGuiNet\Adfectus.ImGuiNet.csproj" />
     <ProjectReference Include="..\Adfectus.Platform.DesktopGL\Adfectus.Platform.DesktopGL.csproj" />
+    <ProjectReference Include="..\Adfectus.Steam\Adfectus.Steam.csproj" />
     <ProjectReference Include="..\Adfectus.Tests\Adfectus.Tests.csproj" />
     <ProjectReference Include="..\Adfectus\Adfectus.csproj" />
   </ItemGroup>
