Sound implementation and other fixes
Audio
 Added test sounds from before rewrite.
 Added Audio Editor/Viewer to Emotion.Tools
 Added an AudioContext object accessible through Engine.Host.Platform.Audio
 Added an AudioDevice representitive object.
 Added a basic WasApi implementation.
 Added COM interop classes for WasApi.
 Added channel, sample size, and sample rate conversion functions.

Other
 Moved Thanks file from before rewrite.
 Added camera speed controls to the Map Editor
 Fixed a crash with the TileMap when a non .tmx file is provided to it. (or an invalid such file)
 The shader factory attempts will now be logged as traces.
 Style fixes to the NtDll, Shell32, and SynchApi wrappers.
 Applied code style to the Win32Platform.

--- a/Emotion.ExecTest/Emotion.ExecTest.csproj
+++ b/Emotion.ExecTest/Emotion.ExecTest.csproj
@@ -7,13 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Emotion.Plugins.ImGuiNet\Emotion.Plugins.ImGuiNet.csproj" />
     <ProjectReference Include="..\Emotion\Emotion.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Assets\spritesheetAnimation.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <Folder Include="Assets\" />
   </ItemGroup>
 
 </Project>
