Audio Refactor, Stream Resampling, Tests

--- a/Emotion.Test/Emotion.Test.csproj
+++ b/Emotion.Test/Emotion.Test.csproj
@@ -207,6 +207,9 @@
     <None Update="Assets\Sounds\noiceStereo3248Hz.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\Sounds\pepsi.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\Sounds\sadMeme.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
