Batches in the same composer will now share VBOs and VAOs
Added tests for RichText
This change will lower the amount of video memory used and objects allocated, however it means that currently cached batches do not own memory and are not efficient.

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -116,6 +116,9 @@
     <None Update="Assets\CachedResults\RenderComposerSpriteLimitTest.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\CachedResults\RenderRichText.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\CachedResults\ShaderFallback.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
