Text rendering and font parsing tweaks. Breaking change - fonts scale differently now.

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -149,6 +149,9 @@
     <None Update="Assets\Fonts\1980XX.ttf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\Fonts\CaslonOS.otf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\Fonts\DroidSans.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
