Text Rendering Fixes
Fixed the FreeType compilation option not compiling.
Added the ability to specify a separate UV and glyph size - allowing for oversampling. (in the future)
Added test oversampling functionality in the Emotion glyph renderer.
Changed the way the font bbox and yBearing is calculated - fixing some edge cases.

--- a/Emotion/Emotion.csproj
+++ b/Emotion/Emotion.csproj
@@ -31,6 +31,10 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup Condition="$(DefineConstants.Contains('FreeType'))">
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.4.0" />
     <PackageReference Include="NETStandard.Library" Version="2.0.3" />
