--- a/Emotion/Emotion.csproj
+++ b/Emotion/Emotion.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Platform\Helpers\" />
     <Folder Include="Platform\Implementation\Cocoa\" />
     <Folder Include="Platform\Implementation\Wayland\" />
     <Folder Include="Platform\Implementation\X11\" />
