--- a/Emotion/Emotion.csproj
+++ b/Emotion/Emotion.csproj
@@ -52,12 +52,20 @@
     <None Remove="Assets\DefaultShader.xml" />
     <None Remove="Assets\DefaultVert.vert" />
     <None Remove="Assets\GetTextureColor.c" />
+    <None Remove="Assets\Shaders\Blur.frag" />
+    <None Remove="Assets\Shaders\Blur.xml" />
     <None Remove="Assets\Shaders\GetTextureSize.c" />
     <None Remove="Assets\Shaders\SSAA.frag" />
     <None Remove="Assets\Shaders\SSAA.xml" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Assets\Shaders\Blur.frag">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Assets\Shaders\Blur.xml">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="Assets\Shaders\DefaultFrag.frag" />
     <EmbeddedResource Include="Assets\Shaders\DefaultShader.xml" />
     <EmbeddedResource Include="Assets\Shaders\DefaultVert.vert" />
