Fixed accessing FrameBuffer's depth texture, and added tests.
- You can now specify the pixel format of Textures
- Added a test/example for copying depth from another framebuffer.

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -21,10 +21,14 @@
 
   <ItemGroup>
     <None Remove="Assets\Embedded\EmbedText.txt" />
+    <None Remove="Assets\Shaders\DepthTest.frag" />
+    <None Remove="Assets\Shaders\DepthTest.xml" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Assets\Embedded\EmbedText.txt" />
+    <EmbeddedResource Include="Assets\Shaders\DepthTest.frag" />
+    <EmbeddedResource Include="Assets\Shaders\DepthTest.xml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -135,6 +139,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Assets\CachedResults\ShaderTest3.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\CachedResults\TestDepthFromOtherFrameBuffer.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Assets\CachedResults\TestFullScale.png">
