Moved CSharp scripting to a separate project.

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Emotion.Plugins.CSharpScripting\Emotion.Plugins.CSharpScripting.csproj" />
     <ProjectReference Include="..\Emotion.Test\Emotion.Test.csproj" />
   </ItemGroup>
 
