Test artifact will be created even if the build fails.

--- a/.github/workflows/buildWindows.yml
+++ b/.github/workflows/buildWindows.yml
@@ -25,6 +25,7 @@ jobs:
         ls .
         .\Tests.exe
     - name: Upload Test Artifact
+      if: always()
       uses: actions/upload-artifact@master
       with:
         name: Test Result Artifact
